# Autonomous-Driving-Object-Detection-using-Computer-Vision

./: README.md  environment.yml  requirements.txt
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_package/lib/: libmy_package__rosidl_generator_c.dylib  libmy_package__rosidl_generator_py.dylib  libmy_package__rosidl_typesupport_c.dylib  libmy_package__rosidl_typesupport_cpp.dylib  libmy_package__rosidl_typesupport_fastrtps_c.dylib  libmy_package__rosidl_typesupport_fastrtps_cpp.dylib  libmy_package__rosidl_typesupport_introspection_c.dylib
install/yolobot_algo/lib/: libyolobot_algo__rosidl_generator_c.dylib  libyolobot_algo__rosidl_generator_py.dylib  libyolobot_algo__rosidl_typesupport_c.dylib  libyolobot_algo__rosidl_typesupport_cpp.dylib  libyolobot_algo__rosidl_typesupport_fastrtps_c.dylib  (+1 more)
log/: latest_build
src/my_package/: CMakeLists.txt  package.xml
src/my_package/config/: drive_bot.rviz  local_planner_params.yaml  mapper_params_online_async.yaml  move_base_params.yaml  my_controllers.yaml  twist_message.yaml
src/my_package/description/: camera_bigger.xacro  gazebo_control_bigger.xacro  lidar_bigger.xacro  robot.urdf.bigger.xacro  robot_core_bigger.xacro
src/my_package/launch/: rsp.launch.py  rsp.launch.sim.py
src/my_package/map/: city_map_save.pgm  city_map_save.yaml
src/my_package/models/Wall/: model.sdf
src/my_package/models/Wall_long/: model.config  model.sdf
src/my_package/worlds/: city
src/yolobot_algo/: CMakeLists.txt  package.xml
(+2785 files in other folders)
